styles/base.scss
/* ... */
body > *:not(.modals) .bootstrapiso .table-responsive {
  margin-right: -2.2857143em;
  border: 0 none;
  padding-right: 2.2857143em;
}

.bootstrapiso .table-responsive table {
  border-width: 0;
}

.bootstrapiso .table-responsive td.actions {
  overflow: inherit !important;
}

.bootstrapiso .table-responsive .group-row td {
  position: relative;
  padding-right: 3em;

  span.right {
    float: right;
  }

  > i.chevron {
    position: absolute;
    right: 0.2em;
  }
}

.bootstrapiso .table-responsive table .tree-cell [class*='table-tree-content'] {
  overflow: inherit !important;
  height: 20px;
}

.ui.menu .item > i.chevron.icon {
  padding: 0em;
  float: right;
  margin: 0em 0em 0em 1em;
  font-size: 70%;
}

i.icon:not(.dropdown):not(.times):not(.sort):not(.unlink):not(.thick) {
  font-family: 'thin-icons' !important;
}

i.icon.thick {
  font-family: 'icons' !important;
}

i.icon.clickable:hover {
  color: #4183c4;
}

.product-details {
  > div {
    height: 100%;
    padding-bottom: 6.5rem !important;
  }

  .ui.attached.segment {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  .segment-fixed {
    position: fixed;
    bottom: 2rem;
    width: calc((100% - (2 * 1.2857143rem)) * 0.3125 * 0.75 - 2rem - 2px);
    margin-left: 0;
    margin-right: 0;
    box-shadow: 0 0 0 1px #fff, 0 2.5em 0 1px #fff;
  }
}

@media (max-width: 1680px) {
  .product-details {
    .segment-fixed {
      width: calc((100% - (2 * 1.2857143rem)) * 0.3125 - 2rem - 2px);
    }
  }
}

@media (max-width: 767px) {
  .product-details {
    .segment-fixed {
      width: calc(100% - 100px);
    }
  }
}

.ui.grid.data-grid {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.142857rem;

  > .column {
    min-height: 2em;
    padding-top: 0.111111em;
    padding-bottom: 0.111111em;
    line-height: 1.777778em;

    &.key {
      color: #777;
    }

    &.small {
      font-size: 1rem;
    }

    .labels {
      padding-top: 3px;
      line-height: 1;

      .label {
        margin-bottom: 3px;
        vertical-align: top;
      }
    }
  }
}

// .ui.grid.tier-prices {

//   .row {
//     padding: 0.1428571em 1em 0.1428571em 0;

//     .column {

//       &:first-child {
//         padding: 0.1428571em 1em;

//         .ui.label {
//           display: block;
//           padding: 0.5833em 0;
//           background: #fff;
//           text-align: center;
//           font-size: 1.16666667rem;
//           line-height: 1.2;
//         }
//       }

//       &:nth-child(2) {
//         padding: 0.1428571em 1em;

//         .icons {

//           .chevron.right {
//             transform: scale(2.0,0.8);
//             margin: 0.15em -1px 0 1px;
//             line-height: 2;
//           }

//           .window.minimize {
//             margin-top: -0.3em;
//             line-height: 2;
//           }
//         }
//       }

//       &:last-child {
//         padding: 0.1428571em 1em;

//         .fields.equal > .field {
//           width: 50%;
//         }
//       }
//     }

//     &:first-child {

//       .column:nth-child(2) .icons {
//         margin-top: 1.75rem;
//       }
//     }
//   }
// }

.ui.segment:after {
  content: '';
  clear: both;
  display: block;
}

.ui.label.bordered {
  height: 22px;
  margin: -2px 0 -1px;
  border: solid 1px #dee2e6;
  border-radius: 2px;
  padding: 2px 6px 2px 7px;
  background-color: #f8f9fb;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.3333333;

  &.right {
    float: right;
  }
}

.fields .field .selection.dropdown:not(.label) {
  max-width: 100%;
  min-width: 100%;
}

.accordion {
  > .title {
    padding: 0 0 1em;
  }
}

div.page-wrapper {
  background: #f8f9fb;
  overflow-y: auto;
  overflow-x: hidden;
  > .flex.stretched,
  .marketplace-container > .flex.stretched {
    flex-grow: 1;
    flex-shrink: 1;
    height: 100%;
    max-height: 100%;
  }

  .marketplace-container {
    display: flex;
    flex-flow: column;
    height: 100%;
    max-height: 100%;

    > .secondary.menu:first-child {
      margin-bottom: 1em;
    }

    > .container {
      flex-grow: 1;
      flex-shrink: 1;
      display: flex;
      flex-flow: column;
      height: auto;
      min-height: 0;

      .selection {
        width: auto;
      }

      .segment {
        height: 100%;
        min-height: 0;
      }
    }

    .bootstrapiso > div.flex-column {
      max-height: 100%;
      min-height: 0;
    }
  }

  div.padded.segment {
    border: 1px solid #dee2e6;
    background: #fff;

    .dimmer {
      top: -1px !important;
      left: -1px !important;
      width: calc(100% + 2px);
      height: calc(100% + 2px);
    }
  }

  .shopping-cart-items,
  div.dropzoneLot,
  .ui.fluid.container .ui.pointing.secondary.menu {
    background: #fff;
  }

  div.ui.inverted.dimmer,
  .ui.loading.segment:before {
    background: #f8f9fb;
  }
}

.sui-error-message {
  display: block;
  margin: 0.28571429rem 0;
  color: rgb(159, 58, 56);
  font-size: 0.92857143em;
}

.ui.error.message .content p {
  line-height: 1.5;
}

#page.scrolling {
  height: 100%;

  .scrollbar-container {
    position: relative;
    transform: translateX(0);
    overflow: hidden;
    width: calc(100% + (2.2857143em * 2));
    height: 100%;
    margin: 0 -2.2857143em;
    padding: 0 2.2857143em 3em;

    .ps__rail-y {
      position: absolute;
      left: auto !important;
      right: 0 !important;
      width: 1em;
      height: calc(100% - 0.2em) !important;
      margin: 0.1em 0;

      .ps__thumb-y {
        position: absolute;
        width: 0.8em;
        margin: 0 0.1em;
        background: rgba(0, 0, 0, 0.15);
      }
    }
  }
}

#page.auto-scrolling {
  display: flex;
  flex-flow: column;
  height: 100%;

  > .scroll-area {
    flex-grow: 1;
    flex-shrink: 1;
    overflow-x: hidden;
    overflow-y: auto;
  }

  > *:last-child {
    padding-bottom: 32px;
  }
}
/* ... */

